--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -162,36 +162,25 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
+          <h5 class="white-text">About the Project</h5>
           <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
 
 
         </div>
+        
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
+          <h5 class="white-text">Our Team</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/sathsara-wanaguru-3b25331b7/">Sathsara Wanaguru</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/amaya-dolawatta">Amaya Dolawatta</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/uresha-kolonne-637587220">Uresha Kolonne</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/duneesha-samarakoon">Duneesha Samarakoon</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/dehemi-rajapaksha">Dehemi Rajapakse</a></li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
+    
   </footer>
 
 
