--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -37,33 +37,6 @@
 
               <div class="row">
     <form action='/predict' method="post" class="col s12">
-      <!-- <div class="row">
-        <div class="input-field col s4">
-            <label for="first_name"><b>Temperature</b></label>
-            <br>
-          <input placeholder="Temperature in Celsius" name="Temperature" id="first_name" type="text" class="validate">
-        </div>
-        <div class="input-field col s4">
-
-          <label for="last_name"><b>Oxygen </b></label>
-            <br>
-          <input id="last_name" name="Oxygen" placeholder="Oxygen content in ppm"  type="text" class="validate">
-
-        </div>
-
-        <div class="input-field col s4">
-            <label for="_name"><b>Humidity</b></label>
-            <br>
-          <input id="_name" name="Humidity" placeholder="Humidity %" type="text" class="validate">
-
-        </div>
-
-      </div> -->
-
-      <!-- <div class="row center">
-
-          <button type="submit" class="btn-large waves-effect waves-light orange">Predict Probability</button>
-      </div> -->
       
     </form>
       </div>
@@ -144,7 +117,7 @@
         </form>
         <div class="row center">
 
-          <button type="submit" class="btn-large waves-effect waves-light orange">Predict Probability</button>
+          <button type="submit" class="btn-large waves-effect waves-light orange">Predict</button>
         </div>
       <br>
       <br>
@@ -163,8 +136,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">About the Project</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
+          <p class="grey-text text-lighten-4">We are a team of Data Science undergraduates of Sri lankan Institute of Information Technology, working on this project as learning and experiencing machine learning models. We garantee that the prediction is based on true patients data.
 
         </div>
         
