--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
 	font-size: inherit;
 }
 .bg-logo{
-  background: url({{ url_for ('static', filename = '/static/forest_conserv.png') }});
+  background: url({{ url_for ('templates', filename = '/templates/logo.png') }});
   background-size: 100% 100%;
   height: 300px;
   background-size: cover;
