--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -9,6 +9,36 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  
+  <style>
+    .headTitle{
+  color: red !important;
+  background-color: red !important;
+}
+
+.fromCSS{
+  border-radius: 2px !important;
+  border:2px solid #000 !important;
+  padding: 20px 50px 20px 50px !important;
+}
+
+.inputAnswers{
+  border-radius: 10px !important;
+  border: 1px solid black !important;
+  
+}
+
+.predClass{
+  color: rgb(255, 255, 255) !important;
+  font-weight: bold !important;
+  font-size: 15px !important;
+  text-align: center !important;
+  align-items: center !important;
+  background-color: #000 !important;
+  padding: 10px 2px 10px 2px !important;
+}
+  </style>
+  
 </head>
 
 <body>
@@ -36,7 +66,7 @@
       </div>
 
               <div class="row">
-    <form action='/predict' method="post" class="col s12">
+    <form action='/predict' method="post" class="formCSS">
       
     </form>
       </div>
@@ -136,7 +166,7 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text">About the Project</h5>
-          <p class="grey-text text-lighten-4">We are a team of Data Science undergraduates of Sri lankan Institute of Information Technology, working on this project as learning and experiencing machine learning models. We garantee that the prediction is based on true patients data.
+          <p align = "Justify" class="grey-text text-lighten-4">We are a team of Data Science undergraduates of Sri lankan Institute of Information Technology, working on this project as learning and experiencing machine learning models. We garantee that the prediction is based on true patients data.
 
         </div>
         
