--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Heart Disease Prediction</title>
 
-  <!-- CSS  -->
+<!--   <!-- CSS
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
   
   <style>
     .headTitle{
