--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -6,9 +6,9 @@
   <title>Heart Disease Prediction</title>
 
   <!-- CSS 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <!--<link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
+  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   
   <style>
     .headTitle{
