--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -7,37 +7,10 @@
 
   <!-- CSS 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
-  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
+  <link href="./static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   
-  <style>
-    .headTitle{
-  color: red !important;
-  background-color: red !important;
-}
-
-.fromCSS{
-  border-radius: 2px !important;
-  border:2px solid #000 !important;
-  padding: 20px 50px 20px 50px !important;
-}
-
-.inputAnswers{
-  border-radius: 10px !important;
-  border: 1px solid black !important;
   
-}
-
-.predClass{
-  color: rgb(255, 255, 255) !important;
-  font-weight: bold !important;
-  font-size: 15px !important;
-  text-align: center !important;
-  align-items: center !important;
-  background-color: #000 !important;
-  padding: 10px 2px 10px 2px !important;
-}
-  </style>
   
 </head>
 
