--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -11,6 +11,12 @@
   <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   
   
+  <style>
+    .color-red{
+      color: ;
+    }
+  </style>
+  
   
 </head>
 
@@ -22,7 +28,7 @@
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Heart Disease Prediction</a></li>
+        <li class="color-red"><a href="#">Heart Disease Prediction</a></li>
       </ul>
       
     </div>
