--- a/templates/heart_disease_predict_.html
+++ b/templates/heart_disease_predict_.html
@@ -1,176 +1,233 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Heart Disease Prediction</title>
+<meta charset="ISO-8859-1">
+<title>Heart Disease Prediction</title>
 
-  <!-- CSS 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="./static/css2/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
-  <link href="../static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link rel = "stylesheet" href = "../static/styles.css">
+<style>
+#bposition{
+ border: none;
+ color: white;
+ padding: 16px 32px;
+ background-color : none;
+ position : absolute;
+ left:500px;
+ top :285px;
+ }
+#bposition:hover {
   
-  
-  <style>
-    .color-red{
-      color: ;
-    }
-  </style>
-  
-  
+  color: #2E8B57;
+}
+
+</style>
 </head>
-
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">lg</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Heart Disease Prediction</a></li>
-      </ul>
+	<div class = "header">
+		<h1>|    Heart Disease Prediction</h1>
+	</div>
+	<br><br><br><br><br>
+	<h1 align = "center">Predict Before You Suffer</h1>
+	
+	<div class = "main">
+	<img src = "../static/logo.png" class = "logo">
+	
+	<form action="/predict" method="post" class="formCSS">
+		<table class="table">
+			<tr>
+				<td>
+					<label for="age">Age</label>
+					<br>
+					<input   id="age" name='age'type="text" class="validate">
+				</td>
+				<td>
+					<label for="sex">Gender</label>
+					<br>
+					<!-- <input   id="sex" name='sex'type="text" class="validate"> -->
+						<select name="sex" id="sex">
+							<option value="1">Male</option>
+							<option value="0">Female</option>
+						</select> 
+				</td>
+				<td>
+					<label for="cp">Chest Pain</label>
+					<br>
+					<!-- <input   id="cp" name='cp'type="text" class="validate"> -->
+					<select name="cp" id="cp">
+						<option value="0">No Pain</option>
+						<option value="1">Low Pain</option>
+						<option value="2">Moderate Pain</option>
+						<option value="3">High Pain</option>
+					</select> 
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<label for="thalach">Maximum Heart Rate</label>
+					<br>
+					<input   id="thalach" name='thalach' type="text" class="validate">
+						
+				</td>
+				<td>
+					<label for="ex">Heart Pain at High Exercise</label>
+					<br>
+					<select name="ex" id="ex">
+						<option value="1">Yes</option>
+						<option value="0">No</option>
+					</select>
+				</td>
+				<td>
+					<label for="st">ST Value of ECG</label>
+					<br>
+					<input   id="st" name='st' type="text" class="validate">
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<label for="slope">Slope</b></label>
+					<br>
+					<select name="slope" id="slope">
+						<option value="0">No Slope</option>
+						<option value="1">Low Slope</option>
+						<option value="2">High Slope</option>
+					</select>
+				</td>
+				<td>
+					<label for="ca"> Coloured Major Vessels Count</label>
+					<br>
+					<select name="ca" id="ca">
+						<option value="0">0</option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+					</select> 
+				</td>
+				<td>
+					<label for="thal">Thalesimia</label>
+					<br>
+					<select name="thal" id="thal">
+						<option value="0">Normal</option>
+						<option value="1">Fixed Defect</option>
+						<option value="2">Reversable Defect</option>
+					</select>                    </td>
+			</tr>
+			<tr>
+				<td></td>
+			<td>
+				<button type="submit" class="button">Predict Probability</button>
+			</td>
+			</tr>
+		</table>
+	</form>
+	<br><br>
+        <div class="pred">{{pred}}</div><br>
+	
+	<br><br><br><br><br>
+	</div>
+	<div class ="footer">
+		<table class="ftbl">
+		 <tr><td><img src = "../static/copy.png" class ="icon" width = "20px" length = "20px"> All rights reserved<td>
+		</tr>
+		
+		</table>
+		
+	</div>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li class="color-red"><a href="#">Heart Disease Prediction</a></li>
-      </ul>
-      
-    </div>
-  </nav>
-
-
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <h1 class="header center orange-text">Heart Disease Prediction</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Predict Before You Suffer
-        
-        </h5>
-      </div>
-
-              <div class="row">
-    <form action='/predict' method="post" class="formCSS">
-      
-    </form>
-      </div>
-      <form action='/predict' method="POST" class="col s12">
-        <table>
-          <tr>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Age</b></label>
-                <br>
-              <input   id="first_name" name='age'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Sex</b></label>
-                <br>
-              <input   id="first_name" name='sex'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Chest Pain</b></label>
-                <br>
-              <input   id="first_name" name='chestPain'type="text" class="validate">
-            </div>
-            </td>
-          </tr>
-    
-          <tr>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Maximum Heart Rate</b></label>
-                <br>
-              <input   id="first_name" name='maxheartrate'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Exercise Induced Angina</b></label>
-                <br>
-              <input   id="first_name" name='EIA'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Old Peak</b></label>
-                <br>
-              <input   id="first_name" name='oldPeak'type="text" class="validate">
-            </div>
-            </td>
-          </tr>
-    
-          <tr>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Slope</b></label>
-                <br>
-              <input   id="first_name" name='Slope'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Ca</b></label>
-                <br>
-              <input   id="first_name" name='Ca'type="text" class="validate">
-            </div>
-            </td>
-            <td>
-              <div class="input-field col s4">
-                <label for="first_name"><b>Thalassemia</b></label>
-                <br>
-              <input   id="first_name" name='Thalassemia'type="text" class="validate">
-            </div>
-            </td>
-          </tr>
-        </table>
-        
-        <div class="row center">
-
-          <button type="submit" class="btn-large waves-effect waves-light orange">Predict</button>
-        </div>
-        </form>
-      <br>
-      <br>
-        {{pred}}<br>
-
-    </div>
-  </div>
-
-
-    <br><br>
-  </div>
-  </div>>
-
-  <footer class="page-footer orange">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">About the Project</h5>
-          <p align = "Justify" class="grey-text text-lighten-4">We are a team of Data Science undergraduates of Sri lankan Institute of Information Technology, working on this project as learning and experiencing machine learning models. We garantee that the prediction is based on true patients data.
-
-        </div>
-        
-        <div class="col l3 s12">
-          <h5 class="white-text">Our Team</h5>
-          <ul>
-            <li><a class="white-text" href="https://www.linkedin.com/in/sathsara-wanaguru-3b25331b7/">Sathsara Wanaguru</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/amaya-dolawatta">Amaya Dolawatta</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/uresha-kolonne-637587220">Uresha Kolonne</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/duneesha-samarakoon">Duneesha Samarakoon</a></li>
-            <li><a class="white-text" href="https://www.linkedin.com/in/dehemi-rajapaksha">Dehemi Rajapakse</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    
-  </footer>
-
-
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src=".js/materialize.js"></script>
-  <script src="js/init.js"></script>
-
-  </body>
+</body>
 </html>
+<!-- <html>
+    <head>
+        <title>Heart Disease Prediction</title>
+        <link rel = "stylesheet" href = "../static/styles.css">
+    </head>
+    <body>
+        <h1>Heart Disease Prediction</h1>
+        <form action="/predict" method="post" class="formCSS">
+            <table class="table">
+                <tr>
+                    <td>
+                        <label for="age"><b>Age</b></label>
+                        <br>
+                        <input   id="age" name='age'type="text" class="validate">
+                    </td>
+                    <td>
+                        <label for="sex"><b>Gender</b></label>
+                        <br>
+                        
+                            <select name="sex" id="sex">
+                                <option value="1">Male</option>
+                                <option value="0">Female</option>
+                            </select> 
+                    </td>
+                    <td>
+                        <label for="cp"><b>Chest Pain</b></label>
+                        <br>
+                    
+                        <select name="cp" id="cp">
+                            <option value="0">No Pain</option>
+                            <option value="1">Low Pain</option>
+                            <option value="2">Moderate Pain</option>
+                            <option value="3">High Pain</option>
+                        </select> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="thalach">Maximum Heart Rate</label>
+                        <br>
+                        <input   id="thalach" name='thalach' type="text" class="validate">
+                            
+                    </td>
+                    <td>
+                        <label for="ex"><b>Heart Pain at High Exercise</b></label>
+                        <br>
+                        <select name="ex" id="ex">
+                            <option value="1">Yes</option>
+                            <option value="0">No</option>
+                        </select>
+                    </td>
+                    <td>
+                        <label for="st"><b>ST Value of ECG</b></label>
+                        <br>
+                        <input   id="st" name='st' type="number" class="validate">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="slope"><b>Slope</b></label>
+                        <br>
+                        <select name="slope" id="slope">
+                            <option value="0">No Slope</option>
+                            <option value="1">Low Slope</option>
+                            <option value="2">High Slope</option>
+                        </select>
+                    </td>
+                    <td>
+                        <label for="ca"><b>Number of Major Vessels Coloured</b></label>
+                        <br>
+                        <select name="ca" id="ca">
+                            <option value="0">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select> 
+                    </td>
+                    <td>
+                        <label for="thal"><b>Thalesimia</b></label>
+                        <br>
+                        <select name="thal" id="thal">
+                            <option value="0">Normal</option>
+                            <option value="1">Fixed Defect</option>
+                            <option value="2">Reversable Defect</option>
+                        </select>                    </td>
+                </tr>
+                <div class="row center">
 
+                    <button type="submit" class="btn-large waves-effect waves-light orange">Predict Probability</button>
+                  </div>
+            </table>
+        </form>
+        <br>
+        {{pred}}<br>
+    </body>
+</html> -->
